start working on linked list replacement for queue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,12 @@
     "memory": "cpp",
     "random": "cpp",
     "initializer_list": "cpp",
-    "ranges": "cpp"
+    "ranges": "cpp",
+    "exception": "cpp",
+    "memory_resource": "cpp",
+    "new": "cpp",
+    "ostream": "cpp",
+    "stdexcept": "cpp",
+    "streambuf": "cpp"
   }
 }
