finish up testing effort

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,8 @@ lib_deps =
 	ESP8266WiFi
 	ESP8266WebServer
 monitor_speed = 115200
+build_flags = -fexceptions
+build_unflags = -fno-exceptions
 
 [env:esp12e_ota]
 extends = env:esp12e
