update web server with json response for /events endpoint

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,7 @@ lib_deps =
 	NTPClient
 	ESP8266WiFi
 	ESP8266WebServer
+	ArduinoJson
 monitor_speed = 115200
 build_flags = -fexceptions
 build_unflags = -fno-exceptions
