--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,8 @@ lib_deps =
 monitor_speed = 115200
 build_flags = -fexceptions
 build_unflags = -fno-exceptions
+monitor_filters = colorize, esp8266_exception_decoder, time
+board_build.filesystem = littlefs
 
 [env:esp12e_ota]
 extends = env:esp12e
