--- a/webserver/package.json
+++ b/webserver/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "watch": "webpack --watch --mode development",
+    "serve:node": "node webpack-server.js",
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production"
   },
@@ -10,18 +11,22 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.26.1",
+    "body-parser": "^1.20.0",
     "vue": "^3.2.31"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "babel-loader": "^8.2.4",
+    "cors": "^2.8.5",
     "css-loader": "^6.7.1",
+    "express": "^4.17.3",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "vue-loader": "^17.0.0",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.71.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1"
   }
 }
