--- a/webserver/package.json
+++ b/webserver/package.json
@@ -22,6 +22,8 @@
     "express": "^4.17.3",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.50.0",
+    "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "vue-loader": "^17.0.0",
     "vue-template-compiler": "^2.6.14",
