--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
-src/secrets.h
+secrets.h
 node_modules
 lib/Weblog/src/local_config.h
