--- a/platformio.ini
+++ b/platformio.ini
@@ -23,8 +23,10 @@ lib_deps =
 monitor_speed = 115200
 build_flags = -fexceptions
 build_unflags = -fno-exceptions
-monitor_filters = colorize, esp8266_exception_decoder, time
+build_type = debug
+monitor_filters = esp8266_exception_decoder, time, log2file
 board_build.filesystem = littlefs
+board_build.f_cpu = 160000000L
 
 [env:esp12e_ota]
 extends = env:esp12e
