--- a/platformio.ini
+++ b/platformio.ini
@@ -23,12 +23,15 @@ lib_deps =
 monitor_speed = 115200
 build_flags = -fexceptions
 build_unflags = -fno-exceptions
-build_type = debug
-monitor_filters = esp8266_exception_decoder, time, log2file
+; build_type = debug
+monitor_filters = 
+	esp8266_exception_decoder
+	time
+	; log2file
 board_build.filesystem = littlefs
 board_build.f_cpu = 160000000L
 
 [env:esp12e_ota]
 extends = env:esp12e
 upload_protocol = espota
-upload_port = 192.168.86.199
+upload_port = 192.168.1.14
